note about acc increase

--- a/Taurox APC/Data/Core/Languages/English/Traits.xml
+++ b/Taurox APC/Data/Core/Languages/English/Traits.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
 	<entry name="AstraMilitarum/TauroxServoTargetter" value="Servo-skull Targetter"/>
+	<entry name="AstraMilitarum/TauroxServoTargetterDescription" value="Increases the accuracy."/>
 	<entry name="AstraMilitarum/TauroxServoTargetterFlavor" value="With an attached servo-skull, the weapon more easily finds its targets."/>
 </language>
